# car_demo

car_demo/: CMakeLists.txt
car_demo/launch/: demo.launch  demo_no_prius.launch  empty_world.launch  rcv_sim.launch
car_demo/plugins/: PriusHybridPlugin.cc  RCVPlugin.cc  RCVPlugin.hh
car_demo/rviz/: demo.rviz
prius_description/: CMakeLists.txt
prius_description/urdf/: prius.urdf
rcv_description/: CMakeLists.txt  package.xml
rcv_description/urdf/: rcv.urdf
rcv_gazebo_description/: CMakeLists.txt  package.xml
rcv_gazebo_description/urdf/: rcv.urdf
rcv_msgs/: CMakeLists.txt  package.xml
rcv_msgs/msg/: control_command.msg  value_monitor.msg
